@@ -4,30 +4,28 @@ import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.rest.client.api.IGenericClient;
 import ca.uhn.fhir.rest.param.DateParam;
 import ca.uhn.fhir.rest.param.ReferenceParam;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import gov.cms.bfd.server.war.ServerTestUtils;
 import gov.cms.bfd.server.war.utils.AssertUtils;
 import gov.cms.bfd.server.war.utils.RDATestUtils;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.Claim;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 public class R4ClaimResourceProviderIT {
 
   private static final RDATestUtils testUtils = new RDATestUtils();
 
   private static final Set<String> IGNORE_PATTERNS =
-      ImmutableSet.of("\"/link/[0-9]+/url\"", "\"/created\"", "\"/meta/lastUpdated\"");
+      Set.of("\"/link/[0-9]+/url\"", "\"/created\"", "\"/meta/lastUpdated\"");
 
-  @BeforeClass
+  @BeforeAll
   public static void init() {
     testUtils.init();
 
@@ -35,7 +33,7 @@ public class R4ClaimResourceProviderIT {
     testUtils.seedData(testUtils.mcsTestData());
   }
 
-  @AfterClass
+  @AfterAll
   public static void tearDown() {
     testUtils.truncateTables();
     testUtils.destroy();
@@ -74,11 +72,10 @@ public class R4ClaimResourceProviderIT {
             .search()
             .forResource(Claim.class)
             .where(
-                ImmutableMap.of(
-                    "mbi", Collections.singletonList(new ReferenceParam("a7f8e93f09")),
+                Map.of(
+                    "mbi", List.of(new ReferenceParam("a7f8e93f09")),
                     "service-date",
-                        Arrays.asList(
-                            new DateParam("gt1970-07-18"), new DateParam("lt1970-07-30"))))
+                        List.of(new DateParam("gt1970-07-18"), new DateParam("lt1970-07-30"))))
             .returnBundle(Bundle.class)
             .execute();
 
